--- a/core/templates/core/shop.html
+++ b/core/templates/core/shop.html
@@ -6,9 +6,9 @@
     <div class="fillters w-full lg:w-1/4">
         <h3 class="mb-3 text-xl uppercase">Search</h3>
 
-        <form>
+        <form method="GET" action=".">
             <div class="flex">
-                <input type="text" class="p-4 bg-gray-100 border-0" placeholder="Tim kiem...">
+                <input type="text" name="query" class="p-4 bg-gray-100 border-0" placeholder="Tim kiem...">
                 
                 <button class="p-4 bg-gray-100 border-0">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -22,10 +22,10 @@
         <h3 class="mt-6 mb-3 text-xl uppercase">Categories</h3>
         
         <ul class="space-y-2">
-            <li><a href="" class="text-purple-500">All categories</a></li>
-            <li><a href="" class="text-gray-500">Sofa</a></li>
-            <li><a href="" class="text-gray-500">Beds</a></li>
-            <li><a href="" class="text-gray-500">Tables</a></li>
+            <li><a href="{% url 'shop'  %}" class="{% if not active_category %} text-purple-500 {% else %} text-gray-500 {% endif %}">All categories</a></li>
+            {% for category in categories %}
+                <li><a href="{% url 'shop'  %}?category={{category.slug}}" class="{% if category.slug == active_category %} text-purple-500 {% else %} text-gray-500 {% endif %}">{{category.name}}</a></li>
+            {% endfor %}
         </ul>
     </div>
     
