--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -10,7 +10,7 @@
     <nav class="border-b border-gray-300">
         <div class="max-w-6xl mx-auto py-2 px-6 xl:px-0 flex items-center justify-between">
             <div class="menu-left flex items-center space-x-6">
-                <a href="#" class="py-4 text-lg text-purple-500 font-semibold">Nordic Homes</a>
+                <a href="/" class="py-4 text-lg text-purple-500 font-semibold">Nordic Homes</a>
 
                 <ul class="flex items-center space-x-4">
                     <li><a href="{% url 'shop' %}">Shop</a></li>
