--- a/product/templates/product/product.html
+++ b/product/templates/product/product.html
@@ -7,11 +7,13 @@
     </div>
 
     <div class="information w-full lg:w-2/5 lg:p-6">
-        <h1 class="text-2xl">Product Name</h1>
+        <h1 class="text-2xl">{{product.name}}</h1>
 
-        <p class="mt-1 text-gray-400">9.99VND</p>
+        <p class="mt-1 text-gray-400">{{product.get_display_price}}VND</p>
 
-        <p class="mt-6 text-gray-700">Lorem ipsum ...</p>
+        {% if product.description %}
+            <p class="mt-6 text-gray-700">{{product.description}}</p>
+        {% endif %}
         
         <a href="#" class="mt-6 inline-block px-8 py-4 rounded-xl bg-purple-500 text-white hover:bg-purple-700">
             Add to cart
