--- a/product/templates/product/product.html
+++ b/product/templates/product/product.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="max-w-6xl mx-auto flex flex-wrap py-6 px-6 xl:px-0">
     <div class="images w-full mb-6 lg:mb-0 lg:w-3/5">
-        <img src="" alt="" class="rounded-xl">
+        <img src="{{product.image.url}}" alt="" class="rounded-xl">
     </div>
 
     <div class="information w-full lg:w-2/5 lg:p-6">
