- Show errors in the checkout - Change ordering for orders - Create simple success page - Clear cart - Show correct prices in the orders page

--- a/core/templates/core/myaccount.html
+++ b/core/templates/core/myaccount.html
@@ -36,7 +36,7 @@
                             <div class="flex justify-between">
                                 <a href="#" class="text-lg">{{ item.product.name }}</a>
 
-                                <p class="mb-6 pt-1 text-gray-400">200VND</p>
+                                <p class="mb-6 pt-1 text-gray-400">{{item.get_total_price}}VND</p>
                             </div>
 
                             <hr>
@@ -51,7 +51,7 @@
 
             <div>
                 <p class="text-lg"> Date: {{ order.created_at }}</p>
-                <p class="text-lg">Total: 200VND</p>
+                <p class="text-lg">Total: {{ order.get_total_price}}VND</p>
             </div>
         </div>
     {% endfor %}
