--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -10,7 +10,7 @@
         {% endfor %}
     </div>
 
-    <div class="summary w-full w-1/4 p-6 bg-gray-100 rounded-xl mt-3">
+    <div class="summary w-full md:w-1/4 p-6 bg-gray-100 rounded-xl mt-3">
         <h2 class="uppercase text-lg mb-5">Summary</h2>
 
         <div class="mb-6 flex justify-between">
