--- a/product/templates/product/product.html
+++ b/product/templates/product/product.html
@@ -15,6 +15,10 @@
 
         <p class="mt-1 text-gray-400">{{product.get_display_price}}VND</p>
 
+        {% if product.get_rating > 0 %}
+            <p class="mt-1 text-gray-400">Rating: {{ product.get_rating }} / 5</p>
+        {% endif %}
+
         {% if product.description %}
             <p class="mt-6 text-gray-700">{{product.description}}</p>
         {% endif %}
@@ -28,8 +32,46 @@
         >
             Add to cart
         </a>
-    
     </div>
-</>
+
+    <div class="w-full mt-6">
+        <h2 class="text-xl">Reviews</h2>
+
+        {% if request.user.is_authenticated %}
+            <form method="POST" action="." class="mt-6 p-6 bg-gray-100 rounded-xl">
+                {% csrf_token %}
+
+                <div>
+                    <label>Rating</label><br>
+                    <select name="rating">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3" selected>3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
+                </div>
+
+                <div>
+                    <label>Comment</label><br>
+                    <textarea name="content"></textarea>
+                </div>
+
+                <div>
+                    <button class="inline-block px-8 py-4 rounded-xl bg-purple-500 hover:bg-purple-700 text-white">Submit</button>
+                </div>
+            </form>
+        {% endif %}
+
+        {% for review in product.reviews.all %}
+            <div class="px-4 py-6 bg-white rounded-xl mb-4">
+                <strong>Rating: {{ review.rating }}/5</strong><br>
+                <strong>Date: {{ review.created_at | date:"d-m-Y" }}</strong><br> 
+                <strong>Comment</strong><br> 
+                {{ review.content }}
+            </div>
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock %}
