--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -42,6 +42,11 @@
             </div>
 
         </form>
+
+        <div>
+            <p>Nếu bạn chưa có tài khoản? Đăng ký tại đây!</p><br>
+            <a href="{% url 'signup' %}" class="py-4 px-6 rounded-xl text-white bg-purple-500 hover:bg-purple-700">Đăng ký</a>
+        </div>
     </div>
 </div>
 
